# some-rust

./: .gitignore  Cargo.toml  Makefile  boot.s  build.rs  dream-package.nix  flake.nix  linker.ld  package.nix  riscv64-custom.json  riscv64i.json  riscv64ic.json
.cargo/: config.toml
src/: boot.S  boot.s  critical_section.rs  delay.rs  heap.rs  lib.rs  linker.rs  main.rs  metrics.rs  sifive_u_uart.rs  sync.rs  thread.rs  uart.rs  uart_sifive_u.rs
src/io/: b4smt.rs  macros.rs  mod.rs  uart_sifive_u.rs
src/pxet/: asm.rs  mod.rs  structure.rs
