[package]
name = "rust-riscv-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
critical-section = {version = "1.1.2", optional = true}
embedded-hal-nb = "1.0.0"
heapless = "0.8.0"
linked_list_allocator = "0.10.5"
nb = "1.0.0"
riscv = "0.11.0"
# spin = { version = "0.9.8", default-features = false, features = ["lazy","use_ticket_mutex", "rwlock"] }
# spin = { version = "0.9.8", default-features = false, features = [ "spin_mutex", "rwlock" ] }
static_assertions = "1.1.0"
volatile = "0.5.1"

[profile.release]
# opt-level=3
# lto = true

#overflow-checks = true
#debug-assertions = true
[features]
default = [ "b4smt" ]
unicode = []
uart_sifive_u = []
critical_section_mt = ["critical-section"]
b4smt = []

[dev-dependencies]
